css/civicrm.css
/* ... */
#crm-container fieldset.form-layout {
  margin: .25em 0em .5em 0em;
  padding: 1px 10px 1px 10px;
}

#crm-container fieldset.collapsible {
  border: 0px;
}

#crm-container div.form-item {
  border-top-style: none;
  margin: 0px;
  padding: 3px 0px 5px 0px;
  clear: none;
	 overflow: auto; 
	}

#crm-container div.form-item dl, #crm-container .section-hidden dl{
 margin: 0;
}

/* Use definition lists for simple 2 col forms - <dt> for labels, <dd> for fields */
#crm-container div.form-item dt {
  float: left;
  clear: left;
  width: 22%;
  text-align: right;
  vertical-align: top;
  padding: 5px 15px 5px 0px;
  font-size: .95em;
  white-space: normal;
}

#crm-container .section-hidden dt {
  float: left;
  clear: left;
  width: 22%;
  text-align: left;
  font-weight: bold;
  white-space: nowrap;
  padding: 5px 15px 5px 0px;
}


#crm-container div.form-item dd, 
#crm-container .section-hidden dd {
 	padding: 5px;
 	margin-left:23%;
	}

#crm-container div.form-item dd.html-adjust, 
#crm-container div.form-item dl.html-adjust dd{
  width: 57%;
  /*clear: right;*/
}

#crm-container div.form-item dd.description {
 padding: 0px 0px 5px;
 white-space: normal;
}

#crm-container div.form-item span.labels {
  float: left;
  width: 25%;
  text-align: left;
}

#crm-container div.form-item span.fields {
  float: right;
  width: 75%;
  text-align: left;
} 

#crm-container table.form-layout, 
#crm-container table.control-panel, 
#crm-container table.no-border {
  margin: 0em;
  width: 98%;	
  border-collapse: collapse;
  border: 0px none;
}

#crm-container table.form-layout-compressed {
  margin: 0em;
  width: auto;
  border-collapse: collapse;
  border: 1px none;
}

#crm-container table.advmultiselect {
  margin: 0em;
  width: auto;
  border-collapse: collapse;
  border: 1px solid #696969;
}

#crm-container table.advmultiselect td {
  padding: 10px;
}


#crm-container .form-layout td {
  vertical-align: top;
  padding: 5px;
  white-space: normal;
}

#crm-container .form-layout td.report, 
#crm-container .form-layout td.description, 
#crm-container .form-layout-compressed td.description {
  white-space   : normal;
}

#crm-container .form-layout-compressed td, 
#crm-container .form-layout-compressed th {
  vertical-align: text-top;
  padding: 2px 5px;
}

#crm-container .control-panel td {
  padding: 3px;
  width: 25%;
  white-space: nowrap;
  border: 0px none;
  text-align: center;
}

#crm-container .form-layout td.label, #crm-container .form-layout-compressed td.label, #crm-container .selector td.label, #crm-container .form-layout-compressed th.label {
  text-align: right;
  padding: 0.5em 0.5em 0.5em 0.75em;
  border: 0px none;
  vertical-align: top;
}
#crm-container .form-layout td.label, #crm-container .form-layout-compressed td.label {
  width: 20%;
}

#crm-container td.op-checkbox label {
  font-weight: normal;
  font-style: italic;
}

#crm-container .form-layout td.label-left, #crm-container .form-layout-compressed td.label-left {
  text-align: left;
  padding: 0.5em 0.50em 0em 0.75em;
  border: 0px none;
  vertical-align: top;
  width: 20%;
}

#crm-container table.selector td {
 border-right: 1px solid #dddddd;
}

#crm-container .form-layout td.view-value, #crm-container .form-layout-compressed td.view-value {
  text-align: left;
  padding: 0.5em 0em 0em 0.5em;
  border: 0px none;
  vertical-align: top;
}

#crm-container .form-layout .buttons, #crm-container .form-layout-compressed .buttons {
 padding-top: 10px;
}

#crm-container .form-layout-compressed td.describe-image {
    vertical-align: top;
    padding: 0.5em 0em 0em 0em;
    font-size: .9em
}

#crm-container .right {
  text-align: right;
}

#crm-container .form-layout-compressed td.option-label {
  vertical-align: top;
  text-align: right;
  padding: 0.75em 0.5em 0em 0.75em;
}

#crm-container div.status {
  margin: 0.5em;
  background-color: #ffff99;
  padding: .25em .5em .25em .5em;
  border: 1px solid #696969;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  -khtml-border-radius: 2px;
}

#crm-container div.view-data {
  padding: .25em .5em .25em .5em;
  border: 1px solid DimGray;
  width: auto;
  background-color: #ffffff;
}

#crm-container .footer {
  font-size: 0.8em;
}

#crm-container #civicrm-footer {
  margin-top: 2em;
  border-top: 1px solid #ddd;
  padding: 0.8em;
  text-align: center;
}

#crm-container #record-log {
  padding: 0.8em 0.8em 0em 0em;
  text-align: right;
}
#crm-container #access {
  padding: 0.8em 0.8em 0em 0em;
  text-align: right;
}
#crm-container div.status ul {
  margin: 0;
}

#crm-container div.status dt {
  float: left;
  clear: none;
  width: 30px;
}

#crm-container .messages {
  margin: 1.0em 0em 1.0em;
  border: 1px solid #CCCCCC;
}

#crm-container .action-link {
  margin: 0.25em 0em 0.25em;
  font-weight: bold;
}

#crm-container .header-dark {
  margin: 0.5em 0em 0.5em;
  padding: 0.5em;
  background-color: #999999;
  font-weight: bold;
  color: #FAFAFA;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  -khtml-border-radius: 2px;
}

#crm-container div.display-block {
  font-weight: normal;
  margin: 1.0em 2.0em 1.0em 2.0em;
}

/* Data display layouts */
#crm-container .col1 {
  float: left;
  vertical-align: top;
  width: 40%;
  text-align: left;
  margin: 0px 25px 0px 25px;
} 

#crm-container .col2 {
  float: right;
  vertical-align: top;
  width: 50%;
  text-align: left;
  margin: 0px;
} 

#crm-container ul.indented {
  padding-left: 3em;
}

/*
** CSS for links from Drupal Blocks.
*/

/* Following styles are used to remove the white bullets from the Garland Theme */
div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
  background-image: none;
}

/* Styles from jsTree.com menu. Copied here since Drupal styles over-ride otherwise. */
/* DOTS */
#crm-container .tree-default ul { background-position:6px 1px; background-repeat:repeat-y; background-image:url("../packages/jquery/plugins/themes/default/dot.gif"); }
/* ... */

